# sqlite-fts-python

./: .flake8  .gitignore  .travis.yml  CHANGES.rst  LICENSE  MANIFEST.in  README.rst  README.txt  appveyor.yml  pyproject.toml  setup.cfg  setup.py  sqlite_tokenizer.py  tox.ini
.github/workflows/: package.yml  release.yml
sqlitefts/: __init__.py  __init__.pyi  error.py  error.pyi  fts3.py  fts3.pyi  fts5.py  fts5.pyi  fts5_aux.py  fts5_aux.pyi  ranking.py  ranking.pyi  sqlite_tokenizer.py  tokenizer.py  tokenizer.pyi
src/sqlitefts/: sqlite_tokenizer.py
src/sqlitefts/tests/: test_igo.py
src/tests/: test_base.py  test_igo.py  test_tinysegmenter.py
test/: test_igo.py
tests/: conftest.py  ipadic  jajp_common.py  test_apsw.py  test_base.py  test_base2.py  test_compat.py  test_fts5.py  test_igo.py  test_janome.py  test_many.py  test_mecab.py  test_natto.py  test_ranking.py  test_tinysegmenter.py
