[project]
name = "sqlitefts"
version = "1.0.1"
description = "A Python binding for tokenizers of SQLite Full Text Search"
authors = [{ name = "Hideaki Takahashi", email = "mymelo@gmail.com" }]
dependencies = [
    "cffi>=2.0.0; python_version >= '3.14'",
    "cffi>=1.17.0; python_version >= '3.9'",
    "cffi>=1.15.1 ; platform_python_implementation != 'PyPy'",
]
readme = "README.rst"
requires-python = ">=2.7,!=3.0,!=3.1,!=3.2,!=3.3,!=3.4,!=3.5,!=3.6,!=3.7,!=3.8"
license = { text = "MIT" }
keywords = [
  "SQLite",
  "Full-text",
  "search",
  "FTS",
  "SQLite3",
  "FTS3",
  "FTS4",
  "FTS5",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 2.7",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/hideaki-t/sqlite-fts-python/"
Repository = "https://github.com/hideaki-t/sqlite-fts-python.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["sqlitefts"]

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2 ; python_version >= '3.12'",
    "faker>=30.0.0 ; python_full_version >= '3.12'",
    "pytest>=8.3.2 ; python_version >= '3.12'",
    "types-cffi>=1.16.0.0 ; python_version >= '3.12'",
    "ruff>=0.6.2 ; python_version >= '3.12'",
]

[tool.hatch.build]
include = [
  "sqlitefts/*.py",
  "sqlitefts/*.pyi",
  "sqlitefts/py.typed",
  "tests/**",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
