[wheel]
universal=1

[metadata]
name = sqlitefts
url = https://github.com/hideaki-t/sqlite-fts-python/
version = 1.0.0
author = Hideaki Takahashi
author_email = mymelo@gmail.com
description = A Python binding for tokenizers of SQLite Full Text Search
long_description = file: README.rst
keywords = SQLite, Full-text search, FTS, SQLite3, FTS3, FTS4, FTS5
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Database
    Topic :: Software Development :: Libraries :: Python Modules

[options]
install_requires =
    cffi==1.15.1
include_package_data = True
packages = sqlitefts

[options.package_data]
sqlitefts = py.typed, *.pyi
